--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/resoinsive.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/resoinsive.css">
 </head>
 
 <body>
@@ -72,7 +72,7 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                <span class="navbar-toggler-icon"><i class="fas fa-align-left"></i></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav m-auto mb-2 mb-lg-0">
@@ -352,39 +352,39 @@
     <section id="facilities">
         <div class="container">
             <div class="row">
-                <div class="main">
-                    <div class="item">
-                        <div class="img">
-                            <img src="images/fac1.png" alt="delevaryP">
-                        </div>
-                        <h4>FAST DELIVERY</h4>
-                        <p>Same day delivery as soon as possible</p>
-                    </div>
 
-                    <div class="item">
-                        <div class="img">
-                            <img src="images/fac2.png" alt="delevaryP">
-                        </div>
-                        <h4>FAST DELIVERY</h4>
-                        <p>Same day delivery as soon as possible</p>
+                <div class="col item">
+                    <div class="img">
+                        <img src="images/fac1.png" alt="delevaryP">
                     </div>
-
-                    <div class="item">
-                        <div class="img">
-                            <img src="images/fac3.png" alt="delevaryP">
-                        </div>
-                        <h4>FAST DELIVERY</h4>
-                        <p>Same day delivery as soon as possible</p>
-                    </div>
-
-                    <div class="item">
-                        <div class="img">
-                            <img src="images/fac4.png" alt="delevaryP">
-                        </div>
-                        <h4>FAST DELIVERY</h4>
-                        <p>Same day delivery as soon as possible</p>
-                    </div>
+                    <h4>FAST DELIVERY</h4>
+                    <p>Same day delivery as soon as possible</p>
                 </div>
+
+                <div class="col item">
+                    <div class="img">
+                        <img src="images/fac2.png" alt="delevaryP">
+                    </div>
+                    <h4>FAST DELIVERY</h4>
+                    <p>Same day delivery as soon as possible</p>
+                </div>
+
+                <div class="col item">
+                    <div class="img">
+                        <img src="images/fac3.png" alt="delevaryP">
+                    </div>
+                    <h4>FAST DELIVERY</h4>
+                    <p>Same day delivery as soon as possible</p>
+                </div>
+
+                <div class="col item">
+                    <div class="img">
+                        <img src="images/fac4.png" alt="delevaryP">
+                    </div>
+                    <h4>FAST DELIVERY</h4>
+                    <p>Same day delivery as soon as possible</p>
+                </div>
+
             </div>
         </div>
     </section>
